canvas fullscreen component with initialization

--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@inlet/react-pixi": "^6.8.0",
     "@nextui-org/react": "^1.0.0-beta.10",
+    "firebase": "^9.12.1",
     "next": "12.3.1",
+    "pixi.js": "^6.5.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/node": "18.11.0",
+    "@types/pixi.js": "^5.0.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
